Minor tweaks